--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_REPID_API_KEY=f90ed33cfamsh9290a4124087a5ep1c2816jsnffb24fb48436
+# REACT_APP_REPID_API_KEY=8cf0a4fca4mshfd7a99454350197p1c1670jsn2de6fc17cf75
+# 맨위가 내거 밑에 중호거
